# infoManage

./: Dockerfile  Dockerfile.base  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
djangoProject/: settings.py
infoManage/: LICENSE  admin.py  apps.py  models.py  urls.py
infoManage/fixtures/: init_data.json  init_data.yml
infoManage/migrations/: 0001_initial.py  0002_alter_domainname_server_name_and_more.py
infoManage/static/infoManage/excel/: account.xlsx  domain.xlsx  environment.xlsx  server.xlsx
infoManage/templates/infoManage/: account.html  domain.html  environment.html  home.html  layout.html  login.html  pagination.html  server.html
infoManage/untils/: aes_cbc.py  auth.py  check_code.py  filename.py  forms.py  hash.py
infoManage/views/: account.py  domain.py  environment.py  home.py  login.py  server.py
init/: container_init.py  docker-entrypoint.sh  init.sh  my.cnf  my_settings.py  my_urls.py  uwsgi.ini
