[metadata]
name = django-infoManage
version = 0.1
description = A Django app to manage system account/password/domain...
long_description = file: README.rst
url = https://codeup.aliyun.com/61ce9fac797bacb26a98fb7a/django/infoManage.git
author = Qyoung
author_email = 695702782@qq.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django ~= 4.2
    mysql ~=0.0.3
    mysqlclient ~=2.2.0
    openpyxl ~=3.1.2
    pandas ~=2.0.2
    Pillow ~=9.5.0
    pycryptodome ~=3.17
    uWSGI ~=2.0.21
